--- a/bluediamond2/.classpath
+++ b/bluediamond2/.classpath
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/abomm/HPChannellAccess/V4/HPChannelAccess.jar" sourcepath="C:/Users/abomm/HPChannellAccess/V4/HPChannelAccess.jar"/>
+	<classpathentry kind="lib" path="C:/DevelopmentJars/HPChannelAccess/HPChannelAccess.jar" sourcepath="C:/Users/abomm/HPChannellAccess/V4/HPChannelAccess.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/jcchart.jar"/>
-	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/jcchart3dj2d.jar"/>
-	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/jcpagelayout.jar"/>
+	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/lib/jcchart.jar"/>
+	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/lib/jcchart3dj2d.jar"/>
+	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/lib/jcpagelayout.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/abomm/JavaLibraries/MiGLayout/miglayout-4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/abomm/JavaLibraries/MiGLayout/miglayout-4.0-ideutil.jar"/>
-	<classpathentry kind="lib" path="C:/Users/abomm/JavaLibraries/MiGLayout/miglayout-4.0-swing.jar"/>
-	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/jctable.jar"/>
-	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/vecmath.jar"/>
+	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/lib/jctable.jar"/>
+	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/lib/vecmath.jar"/>
+	<classpathentry kind="lib" path="C:/DevelopmentJars/MigLayout/miglayout-core-5.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/DevelopmentJars/MigLayout/miglayout-swing-5.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
