--- a/bluediamond2/.classpath
+++ b/bluediamond2/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/DevelopmentJars/HPChannelAccess/HPChannelAccess.jar" sourcepath="C:/Users/abomm/HPChannellAccess/V4/HPChannelAccess.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -15,5 +14,7 @@
 	<classpathentry kind="lib" path="C:/JClassDesktopViews/lib/lib/vecmath.jar"/>
 	<classpathentry kind="lib" path="C:/DevelopmentJars/MigLayout/miglayout-core-5.1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="C:/DevelopmentJars/MigLayout/miglayout-swing-5.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/git/jca/target/jca-2.4.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/LookAndFeel/seaglass/seaglass-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
